Move temperature unit toggle to header and fix results overflows

--- a/src/index.css
+++ b/src/index.css
@@ -8,8 +8,10 @@
   --orange: #ef6c00;
   --dark-orange: #e65100;
   --error: #e61b00;
+  --body: #e3e3e3;
 
   font-family: "Open Sans", sans-serif;
+  box-sizing: border-box;
 }
 
 ::selection,
@@ -18,20 +20,15 @@
 }
 
 html,
-body {
+body, #root, #container {
   height: 100%;
-}
-
-.container {
-  height: 100%;
-  display: flex;
-  flex-flow: column;
 }
 
 body {
   margin: 0;
   padding: 0;
-  background-color: #e3e3e3;
+  background-color: var(--body);
+  overflow: hidden;
 }
 
 .hidden {
@@ -45,13 +42,14 @@ body {
 header {
   padding: 50px 0;
   background-color: var(--light-orange);
+  height: 250px;
 }
 
 #title {
   font-weight: lighter;
   text-align: center;
   margin-top: 0;
-  margin-bottom: 55px;
+  margin-bottom: 30px;
   color: white;
 }
 
@@ -93,6 +91,11 @@ form {
   background-color: var(--dark-orange);
 }
 
+#search-icon-container:focus {
+  outline: none;
+  box-shadow: 0 0 1px var(--light);
+}
+
 #location-icon {
   width: 23px;
   position: absolute;
@@ -104,7 +107,7 @@ form {
   width: 60vw;
   height: 30px;
   border-radius: 0 9px 9px 0;
-  border: 5px solid var(--lightorange);
+  border: none;
   background: transparent;
   box-shadow: inset 0 0 10px var(--orange);
   padding: 0px 20px;
@@ -130,7 +133,8 @@ form {
   padding: 0;
   display: table;
   margin: 0 auto;
-  margin-top: 20px;
+  margin-top: 10px;
+  margin-bottom: 5px;
   text-align: center;
   transition: 0.2s;
   font-family: "Hind", sans-serif;
@@ -156,24 +160,14 @@ form {
   }
 }
 
-/* Results */
-/* -     -     -     -     -     -     -     -     -     -     -     -     -     -     -      */
-
-.results {
-  flex: 1;
-  display: flex;
-  transition: 0.5s;
-  position: relative;
-}
-
 /* The switch - the box around the slider */
 .switch {
   position: absolute;
   display: inline-block;
   width: 60px;
   height: 34px;
-  right: 20px;
-  top: 20px;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 /* Hide default HTML checkbox */
@@ -213,12 +207,8 @@ form {
   border-radius: 50%;
 }
 
-/* input:checked + .slider::before {
-  border-radius: 50%;
-} */
-
 input:focus + .slider {
-  box-shadow: inset 0 0 10px var(--orange), 0 0 1px black;
+  box-shadow: inset 0 0 10px var(--orange), 0 0 1px var(--light);
 }
 
 input:checked + .slider:before {
@@ -256,6 +246,49 @@ input:checked + .slider span:first-child {
   color: white !important;
 }
 
+/* Results */
+/* -     -     -     -     -     -     -     -     -     -     -     -     -     -     -      */
+
+.results {
+  display: flex;
+  transition: 0.5s;
+  position: relative;
+  padding: 0;
+  height: calc(100% - 270px);
+}
+
+#num-results {
+  text-align: center;
+  font-family: 'Roboto', sans-serif;
+  font-size: 16px;
+  color: rgba(0, 0, 0, 0.575);
+  font-weight: 400;
+}
+
+#city-name {
+  color: var(--orange);
+}
+
+#loaded-results {
+  overflow-y: scroll;
+  padding: 0 10px 10px 10px;
+}
+
+#loaded-results::before {
+  content:'';
+  width:100%;
+  height:100%;    
+  position:absolute;
+  left:0;
+  top:0;
+  background:linear-gradient(transparent 200px, var(--body));
+  pointer-events: none;
+}
+
+#city-list {
+  padding-bottom: 100px;
+}
+
 #empty {
   display: flex;
   align-items: center;
@@ -278,8 +311,8 @@ input:checked + .slider span:first-child {
   width: 114px;
   height: 114px;
   opacity: 0.1;
-  margin-top: 30px;
-  margin-bottom: 30px;
+  margin-top: 20px;
+  margin-bottom: 10px;
   top: 0;
 }
 
@@ -310,10 +343,17 @@ input:checked + .slider span:first-child {
 /* Footer */
 /* -     -     -     -     -     -     -     -     -     -     -     -     -     -     -      */
 
-#powered-by {
+footer {
   position: absolute;
-  bottom: 0;
-  left: 0;
+  bottom: 0px;
+  left: 0px;
+  padding: 3px;
+  background-color: var(--body);
+  width: 100%;
+}
+
+#powered-by {
+  
   font-family: "Roboto", sans-serif;
   color: black;
   opacity: 0.3;
@@ -323,4 +363,11 @@ input:checked + .slider span:first-child {
 
 #powered-by a {
   color: black;
+}
+
+
+@media (max-width: 250px) {
+  #smiling-sun {
+    display: none;
+  }
 }
